# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: my_test_linter.yml
gendiff/scripts/: gendiff.py  parsers.py
tests/: test_gendiff.py  test_parsers.py
