[tool.poetry]
packages = [
  { include = "gendiff" },
]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AndreyMishuk <andreygim.am@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
